@@ -1,5 +1,8 @@
 - Publish 1.6.3
 
+- Report erratas:
+  * Book 1,2,3,4,5,6: inconsitencies between laguages: "Si el lápiz señala 0, no cuenta." / "If you pick 0 it counts as zero."
+
 FOR FUTURE (1.7+):
 - Describe where:
   * Play on the web
